// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandableList /> should render with a Item 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={false}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <li
        className="listItemPadding"
      >
        <div
          className="listItemContainer"
        >
          <Checkbox
            bsClass="checkbox"
            checked={false}
            disabled={false}
            inline={true}
            inputRef={[Function]}
            onChange={[MockFunction]}
            title=""
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[MockFunction]}
                type="checkbox"
              />
            </label>
          </Checkbox>
          <div
            className="expandBoxContainer"
          >
            <div
              className="fa-stack expandBox"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <ForwardRef
                className="fa-stack-1x iconBackground"
                fixedWidth={false}
                inverse={false}
                name="circle-thin"
                pulse={false}
                spin={false}
              >
                <i
                  className="fa fa-circle-thin fa-stack-1x iconBackground"
                />
              </ForwardRef>
              <ForwardRef
                className="fa-stack-1x"
                fixedWidth={false}
                inverse={false}
                name="angle-up"
                pulse={false}
                spin={false}
              >
                <i
                  className="fa fa-angle-up fa-stack-1x"
                />
              </ForwardRef>
            </div>
          </div>
          <span
            className="header"
          >
            <span
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Wheel of time
            </span>
          </span>
        </div>
        <div
          className="expandableContent"
        />
      </li>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with a nested ExpandableList 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={true}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <li
        className="listItemPadding"
      >
        <div
          className="listItemContainer"
        >
          <Checkbox
            bsClass="checkbox"
            checked={false}
            disabled={false}
            inline={true}
            inputRef={[Function]}
            onChange={[MockFunction]}
            title=""
          >
            <label
              className="checkbox-inline"
              title=""
            >
              <input
                checked={false}
                disabled={false}
                onChange={[MockFunction]}
                type="checkbox"
              />
            </label>
          </Checkbox>
          <div
            className="expandBoxContainer"
          >
            <div
              className="fa-stack expandBox"
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              <ForwardRef
                className="fa-stack-1x iconBackground"
                fixedWidth={false}
                inverse={false}
                name="circle-thin"
                pulse={false}
                spin={false}
              >
                <i
                  className="fa fa-circle-thin fa-stack-1x iconBackground"
                />
              </ForwardRef>
              <ForwardRef
                className="fa-stack-1x"
                fixedWidth={false}
                inverse={false}
                name="angle-down"
                pulse={false}
                spin={false}
              >
                <i
                  className="fa fa-angle-down fa-stack-1x"
                />
              </ForwardRef>
            </div>
          </div>
          <span
            className="header"
          >
            <span
              onClick={[Function]}
              role="button"
              tabIndex={0}
            >
              Wheel of time
            </span>
          </span>
        </div>
        <div
          className="expandableContent"
        >
          <ExpandableList>
            <ul
              className="list"
            >
              <ExpandableListItem
                checked={false}
                expandable={true}
                expanded={false}
                header="Edmonds Field"
                indetermined={false}
                onChange={[MockFunction]}
                padded={true}
                selectable={true}
                stayExpanded={false}
              >
                <li
                  className="listItemPadding"
                >
                  <div
                    className="listItemContainer"
                  >
                    <Checkbox
                      bsClass="checkbox"
                      checked={false}
                      disabled={false}
                      inline={true}
                      inputRef={[Function]}
                      onChange={[MockFunction]}
                      title=""
                    >
                      <label
                        className="checkbox-inline"
                        title=""
                      >
                        <input
                          checked={false}
                          disabled={false}
                          onChange={[MockFunction]}
                          type="checkbox"
                        />
                      </label>
                    </Checkbox>
                    <div
                      className="expandBoxContainer"
                    >
                      <div
                        className="fa-stack expandBox"
                        onClick={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        <ForwardRef
                          className="fa-stack-1x iconBackground"
                          fixedWidth={false}
                          inverse={false}
                          name="circle-thin"
                          pulse={false}
                          spin={false}
                        >
                          <i
                            className="fa fa-circle-thin fa-stack-1x iconBackground"
                          />
                        </ForwardRef>
                        <ForwardRef
                          className="fa-stack-1x"
                          fixedWidth={false}
                          inverse={false}
                          name="angle-up"
                          pulse={false}
                          spin={false}
                        >
                          <i
                            className="fa fa-angle-up fa-stack-1x"
                          />
                        </ForwardRef>
                      </div>
                    </div>
                    <span
                      className="header"
                    >
                      <span
                        onClick={[Function]}
                        role="button"
                        tabIndex={0}
                      >
                        Edmonds Field
                      </span>
                    </span>
                  </div>
                  <div
                    className="expandableContent"
                  />
                </li>
              </ExpandableListItem>
            </ul>
          </ExpandableList>
        </div>
      </li>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with no children 1`] = `
<ExpandableList>
  <ul
    className="list"
  />
</ExpandableList>
`;
